# lms

./: .dockerignore  .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
services/course-service/: Dockerfile
services/course-service/app/: Cargo.toml
services/course-service/app/migrations/: 20251215155558_create_modules_table.sql  20251216180129_add_user_roles.sql
services/course-service/app/src/: main.rs
services/identity-service/: Dockerfile
services/identity-service/app/: Cargo.toml
services/identity-service/app/migrations/: 20251215155111_create_users_table.sql  20251215155415_create_courses_table.sql  20251215165722_create_lessons_table.sql
services/identity-service/app/src/: main.rs
services/portal-service/: Dockerfile
services/portal-service/app/: Cargo.toml
services/portal-service/app/src/: main.rs
services/portal-service/app/static/: index.html
