[package]
name = "portal-service-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] } # (NUEVO) Para usar los derives de Serialize/Deserialize
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } # (MODIFICADO) Usar rustls para evitar dependencias de OpenSSL
serde_json = "1.0" # Para parsear JSON